# difm

./: Cargo.toml  README.md
examples/: cross-compile.yml  remote.yml
src/: config.rs  fs.rs  future.rs  main.rs  progress.rs  remote.rs  task.rs  util.rs
src/adapter/: fs.rs  mod.rs
src/adapter/ssh/: exec.rs  mod.rs  transfer.rs
src/config/: mod.rs  ssh.rs
src/remote/: integrity.rs  mod.rs  task.rs  transfer.rs
src/services/: mod.rs  run_task.rs  sync_source.rs
src/ssh/: connect.rs  exec.rs  mod.rs  transfer.rs
