[package]
name = "difm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.9.4"
ssh2-config = "0.2.0"
spinners-rs = "2.3.0"
tokio = { version = "1.28.2", features = ["full"] }
rpassword = "7.2.0"
anyhow = "1.0.71"
glob = "0.3.1"
walkdir = "2.3.3"
futures = "0.3.28"
ignore = "0.4.20"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.22"
structstruck = "0.4.1"
uuid = { version = "1.4.0", features = ["v7", "v4"] }
sha256 = "1.1.4"
regex = "1.8.4"
